--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.0",
         "morgan": "^1.10.0",
-        "socket.io": "^4.7.4"
+        "socket.io": "^4.7.4",
+        "xss-clean": "^0.1.4"
     }
 }
